# pdf-watermark-scrubber

./: .pre-commit-config.yaml  README.md  pdfxchange.js  pyproject.toml
scripts/: infix.py  master-pdf.py  pdfxchange.js  pdfxchange.py
